# extro

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy_report.txt  clippy_report_utf8.txt
.github/workflows/: ci.yml  publish.yml
cli/: Cargo.toml
cli/src/: main.rs
crates/agent/: Cargo.toml
crates/agent/src/: lib.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/wasm/: Cargo.toml
crates/wasm/src/: lib.rs
docs/: architecture.md
examples/basic-ai/: README.md
examples/page-summarizer/: README.md
extension/: manifest.json  package.json
extension/scripts/: build.mjs  dev.mjs
extension/src/background/: index.js
extension/src/content/: index.js
extension/src/popup/: index.html  index.js
extension/src/shared/: engine.js  logger.js
npm/runtime/: README.md  extro-runtime-0.2.0.tgz  package.json
npm/runtime/src/: index.d.ts  index.js  logger.js
