[package]
name = "extro-agent"
description = "Agentic bridge for Extro, providing traceability and LLM-friendly execution."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
extro-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
