[package]
name = "extro-core"
description = "Pure Rust domain logic and state management for Extro extensions."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

