[package]
name = "extro-core"
description = "Pure Rust domain logic and state management for Extro extensions."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]

