[package]
name = "extro-wasm"
description = "WASM bridge and bindings for the Extro framework."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
extro-core = { path = "../core" }
serde.workspace = true
serde_json.workspace = true
serde-wasm-bindgen.workspace = true
wasm-bindgen.workspace = true

